mission3 마무리